# -LFP_1S2026_202303371

./: README.md
PROYECTO 1/: .gitignore  CMakeLists.txt  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Token.cpp  Token.h
PROYECTO 1/examples/: PruebaCmpleta.med  Prueba_htmls.med  ejemplo_avanzado.med  pruebadefinitiva.med
PROYECTO 1/reportes/: hospital.dot  reporte_citas.html  reporte_errores.html  reporte_estadistico.html  reporte_medicos.html  reporte_tokens.html
PROYECTO 1/src/: ErrorManager.cpp  ErrorManager.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  MainWindow.cpp  MainWindow.h  ReportGenerator.cpp  ReportGenerator.h  main.cpp  reporte_errores.html  reporte_tokens.html
PROYECTO 1/tests/: test01_completo.med  test02_token_invalido.med  test03_cadena_sin_cerrar.med  test04_fecha_invalida.med  test05_hora_invalida.med  test06_especialidad_error.med  test07_sangre_error.med  test08_multiples_errores.med  test09_caso_borde_vacio.med  test10_caracteres_especiales.med
